--- a/index.html
+++ b/index.html
@@ -129,6 +129,30 @@
     </div>
     </section>
 
+    <section id="sandy_intelligence">
+        <div class="text_container">
+            <div class="separator gradient">Front End</div>
+        <div class="title" id="geo">
+            Sandy Intelligence Website 
+        </div>
+        <div class="subtitle">
+            Design work and static website development without the use of templates.
+        </div>
+        <div class="skills">
+        <div class="subtitle">Skills used</div>
+        <div class="subtitle text-accent">
+            Html | CSS | Sass | Javascript | Adobe XD | Adobe photoshop | Adobe Illustrator | Adobe After Effects | Lottie Animation
+        </div>
+    </div>
+    <a href="https://sandyintelligence.com/" target="blank">
+
+    <picture>
+        <source media="(max-width: 849px)" srcset="assets\SI_mobile.png">
+        <source id="gait_analysis" media="(min-width: 850px)" srcset="assets\SI_desktop.png">
+        <img class="SI_website_pic" id="gait_analysis" src="assets\SI_mobile.png" alt="Website Image">
+      </picture>
+    </a>
+    </section>
     
 </div>
     
