added menu links to sandy_intelligence

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <ul class="active">
                 <li><a href="#bio">Bio</a></li>
                 <li><a href="#geo">Sandy Geo</a></li>
+                <li><a href="#sandy_intelligence">Sandy Intelligence</a></li>
                 <!-- <li><a href="#sandy_finance">Sandy Finance</a></li> -->
                 <li><a data-toggle="modal" data-target="#contact_form_modal">Contact me</a></li>
             </ul>
@@ -168,6 +169,7 @@
                     <ul>
                         <li><a href="#bio">Bio</a></li>
                         <li><a href="#sandy_geo">Sandy Geo</a></li>
+                        <li><a href="#sandy_intelligence">Sandy Intelligence</a></li>
                         <!-- <li><a href="#sandy_finance">Sandy Finance</a></li> -->
                         
                     </ul>
