adjusted text for recruiters

--- a/index.html
+++ b/index.html
@@ -72,15 +72,12 @@
 
     <section id="sandy_geo">
         <div class="text_container">
-            <div class="separator gradient">My work</div>
+            <div class="separator gradient">Excerpt of my work</div>
         <div class="title" id="geo">
             Sandy Geo 
         </div>
         <div class="subtitle">
             A powerful GIS and Operations Management system that enables you to monitor your organization's data in real-time. 
-            <span class="text-accent">This project is meant to be a commercial product and thus the git repository was not made public; however, 
-                if you would like to discuss the high-level architecture please <a data-toggle="modal" data-target="#contact_form_modal">contact me</a>.
-            </span>
         </div>
         <div class="skills">
         <div class="subtitle">Skills used</div>
