removed Sandy Intelligence section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="active">
                 <li><a href="#bio">Bio</a></li>
                 <li><a href="#geo">Sandy Geo</a></li>
-                <li><a href="#sandy_intelligence">Sandy Intelligence</a></li>
+                <!-- <li><a href="#sandy_intelligence">Sandy Intelligence</a></li> -->
                 <!-- <li><a href="#sandy_finance">Sandy Finance</a></li> -->
                 <li><a data-toggle="modal" data-target="#contact_form_modal">Contact me</a></li>
             </ul>
@@ -106,7 +106,7 @@
     </div>
     </section>
 
-    <section id="sandy_intelligence">
+    <!-- <section id="sandy_intelligence">
         <div class="text_container">
             <div class="separator gradient">Front End</div>
         <div class="title" id="geo">
@@ -129,7 +129,7 @@
         <img class="SI_website_pic" src="assets\SI_mobile.png" alt="Website Image">
       </picture>
     </a>
-    </section>
+    </section> -->
     
 </div>
     
@@ -145,7 +145,7 @@
                     <ul>
                         <li><a href="#bio">Bio</a></li>
                         <li><a href="#sandy_geo">Sandy Geo</a></li>
-                        <li><a href="#sandy_intelligence">Sandy Intelligence</a></li>
+                        <!-- <li><a href="#sandy_intelligence">Sandy Intelligence</a></li> -->
                         <!-- <li><a href="#sandy_finance">Sandy Finance</a></li> -->    
                     </ul>
                 </div>
@@ -154,7 +154,8 @@
                         Useful Links
                     </div>
                     <ul>
-                        <li><a href="https://sandyintelligence.com/" target="blank">sandyintelligence.com</a></li>
+                        <!-- <li><a href="https://sandyintelligence.com/" target="blank">sandyintelligence.com</a></li> -->
+                        <li><a href="https://sandyfinance.com" target="blank">sandyfinance.com</a></li>
                          </ul>
                 </div>
                 <div class="footer-col">
@@ -163,7 +164,7 @@
                     </div>
                     <ul>
                         <li><a href="mailto:danesandy10@gmail.com" target="blank">danesandy10@gmail.com</a></li>
-                        <li><a href="mailto:danesandy@sandyintelligence.com" target="blank">danesandy@sandyintelligence.com</a></li>
+                        <!-- <li><a href="mailto:danesandy@sandyintelligence.com" target="blank">danesandy@sandyintelligence.com</a></li> -->
                         <li><a data-toggle="modal" data-target="#contact_form_modal">send me a message</a></li>
                     </ul>
                 </div>
