added potrait photo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container_sandy">
         <section id="owner">
             <div class="illustration">
-                <img src="assets\owner\Dane Sandy.png" alt="">
+                <img src="assets\owner\Dane headshot circular.png" alt="">
             </div>
             <div class="text_container">
             <div class="title">
@@ -253,7 +253,7 @@
         </div>
         <div class="modal-body">
             <div class="illustration">
-                <img src="assets\owner\Dane Sandy.png" alt="" height="25%">
+                <img src="assets\owner\Dane headshot circular.png" alt="" height="25%">
             </div>
             <div class="text_container">
                 <div class="title">
