--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
                         Useful Links
                     </div>
                     <ul>
-                        <!-- <li><a href="https://sandyintelligence.com/" target="blank">sandyintelligence.com</a></li> -->
-                        <li><a href="https://sandyfinance.com" target="blank">sandyfinance.com</a></li>
+                        <li><a href="https://sandyintelligence.com/" target="blank">sandyintelligence.com</a></li>
+                        <li><a href="https://sandyintelligence.com/noisewatch" target="blank">TT Noise Watch</a></li>
+                        <!-- <li><a href="https://sandyfinance.com" target="blank">sandyfinance.com</a></li> -->
                          </ul>
                 </div>
                 <div class="footer-col">
@@ -176,7 +177,7 @@
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/dane-sandy-mba" target="blank"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://www.instagram.com/danejross" target="blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/danesandy" target="blank"><i class="fab fa-twitter"></i></a>
+                    <!-- <a href="https://twitter.com/danesandy" target="blank"><i class="fab fa-twitter"></i></a> -->
                 </div>
             </div>
         </div>
